--- a/package.json
+++ b/package.json
@@ -10,19 +10,17 @@
 	},
 	"dependencies": {
 		"@types/chalk": "2.2.0",
-		"@types/lokijs": "1.5.4",
-		"@types/node": "16.0.1",
-		"@types/promise-retry": "1.1.3",
-		"@types/random-seed": "0.3.3",
-		"@types/request-promise-native": "1.0.18",
-		"@types/seedrandom": "2.4.28",
-		"@types/twemoji-parser": "13.1.1",
-		"@types/uuid": "8.3.1",
-		"@types/ws": "7.4.6",
-		"autobind-decorator": "2.4.0",
-		"axios": "1.6.0",
-		"canvas": "2.10.2",
-		"chalk": "4.1.1",
+		"@types/lokijs": "1.5.14",
+		"@types/node": "20.11.5",
+		"@types/promise-retry": "1.1.6",
+		"@types/random-seed": "0.3.5",
+		"@types/seedrandom": "3.0.8",
+		"@types/twemoji-parser": "13.1.4",
+		"@types/uuid": "9.0.7",
+		"@types/ws": "8.5.10",
+		"canvas": "2.11.2",
+		"chalk": "5.3.0",
+		"got": "14.0.0",
 		"lokijs": "1.5.12",
 		"memory-streams": "0.1.3",
 		"misskey-reversi": "0.0.5",
