--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 		"noImplicitReturns": true,
 		"noImplicitAny": false,
 		"esModuleInterop": true,
+		"strictPropertyInitialization": false,
 		"typeRoots": [
 			"./node_modules/@types"
 		],
