--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 	"dependencies": {
 		"@types/chalk": "2.2.0",
 		"@types/lokijs": "1.5.14",
-		"@types/node": "20.11.5",
 		"@types/promise-retry": "1.1.6",
 		"@types/random-seed": "0.3.5",
 		"@types/seedrandom": "3.0.8",
@@ -38,8 +37,11 @@
 		"ws": "8.16.0"
 	},
 	"devDependencies": {
+		"@types/node": "20.11.5"
 	},
 	"nodemonConfig": {
-    "ignore": ["memory.json"]
-  }
+		"ignore": [
+			"memory.json"
+		]
+	}
 }
